Tutorial de instalacao em linux
This reverts commit b6e8a3187c3c1a0ff05a93a6578d39aacf1706d2.