@@ -3,3 +3,14 @@ Multi deployer of mobiles apps. One click various deploys.
 
 ## Youtube demo video:
 	https://youtu.be/5HFkHJMZ7UE
+
+## Instalacao em Linux
+
+	- Utilizando o IntelliJ
+	
+	- Baixar o openjdk 11
+	- Baixar o javafx 11
+
+	- Project Structure > Bibliotecas > '+' > adicionar pasta do javafx
+	
+	- Run > Run... > Adicionar ao VM options > module-path "PATH_TO_JAVA_FX/lib" --add-modules=javafx.controls,javafx.fxml  
